# gengoka

./: .gitignore  README.md  gengoka.code-workspace
doc/: .gitignore  prompt.md
doc/ui/: index.html
sys/backend/: docker-compose.dev.yml
sys/backend/app/: .env.example  Cargo.toml  Dockerfile
sys/backend/app/seeds/: seed_data.sql
sys/backend/app/src/: main.rs
sys/backend/app/src/config/: mod.rs
sys/backend/app/src/db/: mod.rs
sys/backend/app/src/handlers/: answer.rs  category.rs  challenge.rs  comment.rs  follow.rs  health.rs  like.rs  mod.rs  ranking.rs  user.rs
sys/backend/app/src/middleware/: mod.rs
sys/backend/app/src/models/: mod.rs
sys/backend/app/src/routes/: mod.rs
sys/backend/app/src/utils/: mod.rs
sys/frontend/user/mobile/android/: .gitignore  build.gradle.kts  gradlew  settings.gradle.kts
sys/frontend/user/mobile/android/app/: build.gradle.kts  proguard-rules.pro
sys/frontend/user/mobile/android/app/src/main/: AndroidManifest.xml
sys/frontend/user/mobile/ios/Gengoka/Gengoka/: ContentView.swift  GengokaApp.swift
sys/frontend/user/mobile/ios/Gengoka/Gengoka.xcodeproj/: project.pbxproj
sys/frontend/user/mobile/ios/Gengoka/Gengoka/Models/: APIResponse.swift  Answer.swift  Category.swift  Challenge.swift  Comment.swift  User.swift
sys/frontend/user/mobile/ios/Gengoka/Gengoka/Resources/: AppColors.swift
sys/frontend/user/mobile/ios/Gengoka/Gengoka/Services/: APIClient.swift  APIEndpoints.swift  AuthService.swift
sys/frontend/user/mobile/ios/Gengoka/Gengoka/ViewModels/: ChallengeViewModel.swift  FeedViewModel.swift  (+2 more)
(+84 files in other folders)
