[package]
name = "gengoka-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4.38", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1.0.68"
anyhow = "1"

# Tracing for actix-web
tracing-actix-web = "0.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
